--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -46,8 +46,8 @@
     }
 
     #map {
-      width: 80vw;
-      height: 50vh;
+      width: 650px;
+      height: 400px;
       border: 2px solid #3293a8;
       border-radius: 8px;
     }
