--- a/tennesseetrails.html
+++ b/tennesseetrails.html
@@ -13,6 +13,7 @@
 
   <style>
     html, body {
+ background-image: url('https://images.unsplash.com/photo-1710162734135-8dc148f53abe?fm=jpg&q=60&w=3000&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Z3JhZGllbnQlMjBncmVlbnxlbnwwfHwwfHx8MA%3D%3D');
       height: 100%;
       margin: 0;
       background-color: #383b39;
@@ -20,27 +21,29 @@
     }
 
     #photo img {
-      width: 100%;
+ border: 6.5px solid #3293a8;
+      width: 99%;
       height: 100px;
       object-fit: cover;
     }
 
     h1 {
       color: #3293a8;
-      font-size: 30px;
+      font-size: 50px;
       text-align: center;
       margin: 20px 0;
     }
 
 p {
-      font-size: 20px;
+      font-size: 18px;
       text-align: center;
       margin: 20px 0;}
 
     #contentWrapper {
       display: flex;
       justify-content: center;
-      padding: 20px;
+      padding-left: 100px;
+padding-right: 100px;
       gap: 5px;
       flex-wrap: wrap; /* stack on smaller screens */
     }
@@ -54,7 +57,7 @@ p {
 
     #map {
       width: 650px;
-      height: 500px;
+      height: 400px;
       border: 2px solid #3293a8;
       border-radius: 8px;
     }
@@ -108,7 +111,7 @@ p {
     <img src="https://github.com/WickHardison/WickHardison.github.io/blob/main/Header.png?raw=true" alt="Mountain Header">
   </div>
 
-  <h1>Great Smoky Mountain National Park Trails</h1>
+  <h1>Great Smoky Mountain National Park Trails & Camping</h1>
 
   <div id="contentWrapper">
   <div id="textBox">
