--- a/lab901.html
+++ b/lab901.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html lang="en">
 <head>
 	<base target="_top">
@@ -68,10 +68,34 @@
 		// the control let's the user turn on / off layers -- ##3 here
 		var layerControl = L.control.layers(baseMaps, null).addTo(map);
 
+		// Define a function to style my choropleth map
+		function style1(feature) {
+		d = feature.properties.PCT_POVERTY;
+		answer = d > 30 ? '#800026' :
+		d > 20 ? '#DB0026 ' :
+		d > 15 ? '#E31A1C' :
+		d > 10 ? '#FC4E2A' :
+		d > 5 ? '#FD8D3C' :
+		d > 3 ? '#FEB24C' :
+		d > 1 ? '#FED976' :
+		'#FFEDA0';
+		styleReturn = {
+		fillColor : answer,
+		weight : 1,
+		opacity : 1,
+		color : 'white',
+		dashArray : '3',
+		fillOpacity : 0.7
+		};
+		return styleReturn;
+		}
+		
 		// let's add the Denver ACS data -- ##4 here
-		$.getJSON('./acs_denver_2021.geojson', function(data) {
-			// Convert file to a layer
-			acsDenver2021Layer = L.geoJSON(data).addTo(map);
+		$.getJSON('./acs_denver_2021.geojson', function(data) {acsDenver2021Layer = L.geoJSON(data,
+		{ style: style1 }).addTo(map);
+		map.panTo(acsDenver2021Layer.getBounds().getCenter());
+		layerControl.addOverlay(acsDenver2021Layer, "Census 2021");
+		});
 
 			// Move the map to the area of the data
 			map.panTo(acsDenver2021Layer.getBounds().getCenter());
