--- a/lab901.html
+++ b/lab901.html
@@ -92,10 +92,13 @@
 		
 		// let's add the Denver ACS data -- ##4 here
 		$.getJSON('./acs_denver_2021.geojson', function(data) {acsDenver2021Layer = L.geoJSON(data,
-		{ style: style1 }).addTo(map);
-		map.panTo(acsDenver2021Layer.getBounds().getCenter());
-		layerControl.addOverlay(acsDenver2021Layer, "Census 2021");
-		});
+			{style: style1,
+			onEachFeature: function(feature, layer) {
+				layer.bindPopup("Percent Poverty: " + feature.properties.PCT_POVERTY + "%");
+				
+			
+			}}).addTo(map);
+		
 
 			// Move the map to the area of the data
 			map.panTo(acsDenver2021Layer.getBounds().getCenter());
