--- a/lab601.html
+++ b/lab601.html
@@ -43,12 +43,12 @@
       $("#click5").click(function() {
         $("#div_ctrl5").html("Skiing");
 
-$("#fadeOutBtn").click(function() {
-  $("#fozzyImg").fadeOut();
+$("#HideBtn").click(function() {
+  $("#fozzyImg").hide();
 });
 
-$("#fadeInBtn").click(function() {
-  $("#fozzyImg").fadeIn();
+$("#ShowBtn").click(function() {
+  $("#fozzyImg").show();
 });
         
       });
