--- a/lab601.html
+++ b/lab601.html
@@ -110,8 +110,8 @@ $("#ShowBtn").click(function() {
       <p class="caption">My sister's dog; Fozzie... Not featured, my better dog; Yogi</p>
 
       <div>
-  <button id="fadeOutBtn">Fade Out Image</button>
-  <button id="fadeInBtn">Fade In Image</button>
+  <button id="HideBtn">Hide Image</button>
+  <button id="ShowBtn">Show Image</button>
 </div>
 
     </div>
