--- a/lab601.html
+++ b/lab601.html
@@ -103,7 +103,7 @@
       </div>
 
       <div id="photo">
-        <img src="https://github.com/WickHardison/WickHardison.github.io/blob/main/fozzy.jpg?raw=true" alt="Cute dog">
+        <img id="fozzyImg" src="https://github.com/WickHardison/WickHardison.github.io/blob/main/fozzy.jpg?raw=true" alt="Cute dog">
       </div>
 
       <p class="caption">My sister's dog; Fozzie... Not featured, my better dog; Yogi</p>
